added empty templates for UI pages

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,26 +13,26 @@ $def with ()
       <h1>Home</h1>
     </div>
 
-    <a href="/api.html">API</a>
+    <a href="/api">API</a>
 
     <h3>USP quotes</h3>
     <ul>
-      <li><a href="/BF4">BF4</a></li>
-      <li><a href="/FIFA">FIFA</a></li>
-      <li><a href="/Madden">Madden</a></li>
-      <li><a href="/UFC">UFC</a></li>
+      <li><a href="/ui/usp_quotes/bf4">BF4</a></li>
+      <li><a href="/ui/usp_quotes/fifa">FIFA</a></li>
+      <li><a href="/ui/usp_quotes/madden">Madden</a></li>
+      <li><a href="/ui/usp_quotes/ufc">UFC</a></li>
     </ul>
 
     <h3>Show Messages</h3>
     <ul>
-      <li><a href="/EA">EA</a></li>
-      <li><a href="/PvZ">PvZ</a></li>
+      <li><a href="/ui/messages/ea">EA</a></li>
+      <li><a href="/ui/messages/pvz">PvZ</a></li>
     </ul>
 
     <h3>Statistics</h3>
     <ul>
-      <li><a href="/NFS">NFS stats</a></li>
-      <li><a href="/Origin">Origin highlights</a></li>
+      <li><a href="/ui/stats/nfs">NFS stats</a></li>
+      <li><a href="/ui/stats/origin">Origin highlights</a></li>
     </ul>
 
   </body>
