--- a/src/static/main.css
+++ b/src/static/main.css
@@ -11,11 +11,11 @@ body {
 
 .header img {
     width: 180px;
+    margin-right: 20px;
     float: left;
 }
 
 .header h1 {
-    margin-left: 30px;
 }
 
 h1 { color: blue; }
