--- a/src/templates/api.html
+++ b/src/templates/api.html
@@ -3,15 +3,13 @@ $def with (endpoints, title_2_link_n_href)
 <html>
   <head>
     <link href="/static/main.css" rel="stylesheet" type="text/css" />
-    <title>CMS :: API for Visualizations</title>
+    <title>CMS :: API Endpoints</title>
   </head>
 
   <body>
 
     <div class="header">
-      <a width="180px" href="/">
-	<img src="/static/ea.png" />
-      </a>
+      <a href="/"><img src="/static/ea.png" /></a>
       <h1>API Endpoints</h1>
     </div>
 
