--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,16 +17,20 @@ $def with ()
 
     <h3>USP quotes</h3>
     <ul>
-      <li><a href="/ui/usp_quotes/bf4">BF4</a></li>
-      <li><a href="/ui/usp_quotes/fifa">FIFA</a></li>
-      <li><a href="/ui/usp_quotes/madden">Madden</a></li>
-      <li><a href="/ui/usp_quotes/ufc">UFC</a></li>
+      <li><a href="/ui/usp_quotes/BF4">BF4</a></li>
+      <li><a href="/ui/usp_quotes/Sports">Sports</a></li>
+      <!--
+      <li><a href="/ui/usp_quotes/sports/NBA">NBA</a></li>
+      <li><a href="/ui/usp_quotes/sports/FIFA">FIFA</a></li>
+      <li><a href="/ui/usp_quotes/sports/Madden">Madden</a></li>
+      <li><a href="/ui/usp_quotes/sports/UFC">UFC</a></li>
+      -->
     </ul>
 
     <h3>Show Messages</h3>
     <ul>
-      <li><a href="/ui/messages/ea">EA</a></li>
-      <li><a href="/ui/messages/pvz">PvZ</a></li>
+      <li><a href="/ui/messages/EA">EA</a></li>
+      <li><a href="/ui/messages/PvZ">PvZ</a></li>
     </ul>
 
     <h3>Statistics</h3>
