--- a/src/templates/usp_quotes.html
+++ b/src/templates/usp_quotes.html
@@ -22,6 +22,7 @@ $def with (brand, usp, quotes, form)
         <input type="submit" />
     </form>
 
+    <div class="vert_spacer"></div>
 
     <h3>Current Quotes</h3>
 
