updated index page - Origin highlights now works

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,15 +21,15 @@ $def with ()
       <li><a href="/ui/usp_quotes/Sports">Sports</a></li>
     </ul>
 
-    <h3>Show Messages  (not working yet)</h3>
+    <h3>Show Messages</h3>
     <ul>
-      <li><a href="/ui/messages/EA">EA</a></li>
-      <li><a href="/ui/messages/PvZ">PvZ</a></li>
+      <li><a href="/ui/messages/EA">EA</a>   <i>-- not working yet</i></li>
+      <li><a href="/ui/messages/PvZ">PvZ</a>   <i>-- not working yet</i></li>
     </ul>
 
-    <h3>Statistics  (not working yet)</h3>
+    <h3>Statistics</h3>
     <ul>
-      <li><a href="/ui/stats/nfs">NFS stats</a></li>
+      <li><a href="/ui/stats/nfs">NFS stats</a>    <i>-- not working yet</i></li>
       <li><a href="/ui/stats/origin">Origin highlights</a></li>
     </ul>
 
