changed EA image

--- a/templates/api.html
+++ b/templates/api.html
@@ -9,7 +9,7 @@ $def with (endpoints, title_2_link_n_href)
   <body>
 
     <div class="header">
-      <a href="/"><img src="/static/ea.png" /></a>
+      <a href="/"><img src="/static/ea.jpeg" /></a>
       <h1>API Endpoints</h1>
     </div>
 
