--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@ $def with ()
   <body>
 
     <div class="header">
-      <img src="/static/ea.png" />
+      <img src="/static/ea.jpeg" />
       <h1>Home</h1>
     </div>
 
