--- a/templates/nfs_stats.html
+++ b/templates/nfs_stats.html
@@ -9,7 +9,7 @@ $def with ()
   <body>
 
     <div class="header">
-      <a href="/"><img src="/static/ea.png" /></a>
+      <a href="/"><img src="/static/ea.jpeg" /></a>
       <h1>NFS Stats</h1>
     </div>
 
