--- a/templates/usp_quotes.html
+++ b/templates/usp_quotes.html
@@ -9,7 +9,7 @@ $def with (brand, usp, quotes, form)
   <body>
 
     <div class="header">
-      <a href="/"><img src="/static/ea.png" /></a>
+      <a href="/"><img src="/static/ea.jpeg" /></a>
       <h1>USP Quotes :: $brand :: $usp</h1>
     </div>
 
