--- a/templates/usp_quotes_index.html
+++ b/templates/usp_quotes_index.html
@@ -9,7 +9,7 @@ $def with (brand, brand_2_usps)
   <body>
 
     <div class="header">
-      <a href="/"><img src="/static/ea.png" /></a>
+      <a href="/"><img src="/static/ea.jpeg" /></a>
       <h1>USP Quotes :: $brand</h1>
     </div>
 
