--- a/templates/messages.html
+++ b/templates/messages.html
@@ -9,7 +9,7 @@ $def with (brand)
   <body>
 
     <div class="header">
-      <a href="/"><img src="/static/ea.png" /></a>
+      <a href="/"><img src="/static/ea.jpeg" /></a>
       <h1>Messages :: $brand</h1>
     </div>
 
