--- a/templates/origin_highlights.html
+++ b/templates/origin_highlights.html
@@ -9,7 +9,7 @@ $def with (stats_list, form)
   <body>
 
     <div class="header">
-      <a href="/"><img src="/static/ea.png" /></a>
+      <a href="/"><img src="/static/ea.jpeg" /></a>
       <h1>Origin Highlights</h1>
     </div>
 
