--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,4 +1,4 @@
-$def with (brand)
+$def with (brand, messages, form, now_datetime)
 
 <html>
   <head>
@@ -12,6 +12,57 @@ $def with (brand)
       <a href="/"><img src="/static/ea.jpeg" /></a>
       <h1>Messages :: $brand</h1>
     </div>
+
+    <!-- form for adding new messages -->
+
+    <h3>Add New Message</h3>
+
+    <form name="main" method="post">
+      $if not form.valid:
+        <p>Oops!  Please fix your input and retry.</p>
+      $:form.render()
+        <input type="submit" />
+    </form>
+
+    <div class="vert_spacer"></div>
+
+    <!-- list of previous stats (not strictly necessary) -->
+
+    <div>
+      <span>UTC Time (as of page load): $now_datetime</span>
+    </div>
+
+    <div class="vert_spacer"></div>
+
+    <h3>Previously Entered Messages</h3>
+
+    $if not messages:
+      <span>There are none.</span>
+    $else:
+      <!-- header -->
+      <div class="row">
+	<div class="stats">Is Active?</div>
+	<div class="stats message">Message</div>
+	<div class="stats secs">Delay (in secs)</div>
+	<div class="stats secs">Duration (in secs)</div>
+	<div class="stats timestamp">created at</div>
+	<div class="stats timestamp">start time</div>
+	<div class="stats timestamp">end time</div>
+	<br style="clear: left;" />
+      </div>
+      
+      <!-- body -->
+      $for msg in messages:
+        <div class="row">
+	  <div class="stats">$msg['is_active']</div>
+	  <div class="stats message">$msg['text']</div>
+	  <div class="stats secs">$msg['delay_secs']</div>
+	  <div class="stats secs">$msg['duration_secs']</div>
+	  <div class="stats timestamp">$msg['created_at']</div>
+	  <div class="stats timestamp">$msg['start_time']</div>
+	  <div class="stats timestamp">$msg['end_time']</div>
+	  <br style="clear: left;" />
+	</div>
 
   </body>
 </html>
