--- a/static/main.css
+++ b/static/main.css
@@ -21,6 +21,7 @@ body {
 h1 { color: blue; }
 h2 { color: blue; }
 h3 { color: blue; }
+h4 { color: blue; }
 
 /*----*/
 
@@ -79,6 +80,10 @@ div.stats {
     float: left;
     width: 100px;
     margin-right: 20px;
+}
+
+div.stats.hd {
+    font-style: italic;
 }
 
 div.secs {
