--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@ $def with ()
       <li><a href="/ui/usp_quotes/Sports">Sports</a></li>
     </ul>
 
-    <h3>Show Messages  <i>(Not working yet)</i></h3>
+    <h3>Show Messages</h3>
     <ul>
       <li><a href="/ui/messages/EA">EA</a></li>
       <li><a href="/ui/messages/PvZ">PvZ</a></li>
