--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,7 @@ $def with ()
 
     <h3>Show Messages</h3>
     <ul>
-      <li><a href="/ui/messages/EA">EA</a></li>
-      <li><a href="/ui/messages/PvZ">PvZ</a></li>
+      <li><a href="/ui/show/messages">Show Messages (any brand)</a></li>
     </ul>
 
     <h3>Statistics</h3>
