--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,4 +1,4 @@
-$def with (brand, messages, form, now_datetime)
+$def with (messages, form, now_datetime)
 
   $def just_messages(name, msgs):
 
@@ -13,23 +13,23 @@ $def with (brand, messages, form, now_datetime)
       <!-- header -->
       <div class="row">
 	<div class="stats hd message">Message</div>
+	<div class="stats hd">Brand</div>
 	<div class="stats hd secs">Delay (in secs)</div>
 	<div class="stats hd secs">Duration (in secs)</div>
 	<div class="stats hd timestamp">created at (BCN)</div>
-	<div class="stats hd timestamp">start time (BCN)</div>
-	<div class="stats hd timestamp">end time (BCN)</div>
+	<div class="stats hd timestamp">desired_start time (BCN)</div>
 	<br style="clear: left;" />
       </div>
       
       <!-- body -->
-      $for msg in msgs:
+      $for m in msgs:
         <div class="row">
-	  <div class="stats message">$msg['text']</div>
-	  <div class="stats secs">$msg['delay_secs']</div>
-	  <div class="stats secs">$msg['duration_secs']</div>
-	  <div class="stats timestamp">$msg['created_at']</div>
-	  <div class="stats timestamp">$msg['start_time']</div>
-	  <div class="stats timestamp">$msg['end_time']</div>
+	  <div class="stats message">$m['text']</div>
+	  <div class="stats">$m['brand']</div>
+	  <div class="stats secs">$m['delay_secs']</div>
+	  <div class="stats secs">$m['duration_secs']</div>
+	  <div class="stats timestamp">$m['created_at']</div>
+	  <div class="stats timestamp">$m['desired_start_time']</div>
 	  <br style="clear: left;" />
 	</div>
 
@@ -37,14 +37,14 @@ $def with (brand, messages, form, now_datetime)
 <html>
   <head>
     <link href="/static/main.css" rel="stylesheet" type="text/css" />
-    <title>Messages :: $brand</title>
+    <title>Messages</title>
   </head>
 
   <body>
 
     <div class="header">
       <a href="/"><img src="/static/ea.jpeg" /></a>
-      <h1>Messages :: $brand</h1>
+      <h1>Messages</h1>
     </div>
 
     <!-- form for adding new messages -->
