fixed twitter call.  added caching.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-$def with ()
+$def with (is_caching_on, counter)
 
 <html>
   <head>
@@ -13,7 +13,28 @@ $def with ()
       <h1>Home</h1>
     </div>
 
-    <a href="/api">API</a>
+    <h3>Caching</h3>
+
+    $if is_caching_on:
+      <div id="is_on" style="display:block;">
+        <span>Caching is on.</span>
+        <div>counter: $counter</div>
+      </div>
+    $else:
+      <form method="POST" action="/ui/caching/start"
+	    onsubmit="document.getElementById('on_btn').disabled=true;
+                      document.getElementById('is_on').style.display='block';">
+        <input id="on_btn" type="submit" value="Turn On" />
+      </form>
+      <div id="is_on" style="display:none;">
+        <span>Caching is on.</span>
+        <div>counter: $counter</div>
+      </div>
+    
+    <h3>API</h3>
+    <ul>
+      <li><a href="/api">API</a></li>
+    </ul>
 
     <h3>USP quotes</h3>
     <ul>
