wait, somehow that didn't work right.

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,8 @@ $def with (is_prefetching_on, counter)
 
     <h3>Show Messages</h3>
     <ul>
-      <li><a href="/ui/show/messages">Show Messages (any brand)</a></li>
+      <li><a href="/ui/messages/ea">EA</a> -- override scheduled visualizations</li>
+      <li><a href="/ui/messages/pvz">PvZ</a> -- appear on regular schedule</li>
     </ul>
 
     <h3>Statistics</h3>
