added NBA USP: "Control the Court"

--- a/templates/pvz_messages.html
+++ b/templates/pvz_messages.html
@@ -5,7 +5,7 @@ $def with (messages, form)
         if key in dico:
             return dico[key]
         else:
-            return '&nbsp;'
+            return ''
 
 <html>
   <head>
@@ -45,7 +45,7 @@ $def with (messages, form)
 	<div class="row">
 	  <div class="stats hd">&nbsp;</div>
 	  <div class="stats hd message">Text</div>
-	  <div class="stats hd message">CTA</div>
+	  <div class="stats hd message">Code</div>
 	  <br style="clear: left;" />
 	</div>
 
