--- a/templates/ea_messages.html
+++ b/templates/ea_messages.html
@@ -51,7 +51,7 @@ $def with (messages, form, now_datetime, format)
   <body>
 
     <div class="header">
-      <a href="/"><img src="/static/ea.jpeg" /></a>
+      <a href="/"><< Home</a>
       <h1>Messages :: EA</h1>
     </div>
 
