--- a/templates/pvz_messages.html
+++ b/templates/pvz_messages.html
@@ -16,7 +16,7 @@ $def with (messages, form)
   <body>
 
     <div class="header">
-      <a href="/"><img src="/static/ea.jpeg" /></a>
+      <a href="/"><< Home</a>
       <h1>Messages :: PvZ</h1>
     </div>
 
