--- a/templates/nfs_stats.html
+++ b/templates/nfs_stats.html
@@ -9,7 +9,7 @@ $def with (stats_list, form)
   <body>
 
     <div class="header">
-      <a href="/"><img src="/static/ea.jpeg" /></a>
+      <a href="/"><< Home</a>
       <h1>NFS Game Stats</h1>
     </div>
 
