making the "name" wider in the UI, so it looks better.

--- a/templates/usp_quotes.html
+++ b/templates/usp_quotes.html
@@ -41,7 +41,7 @@ $def with (brand, usp, quotes, form)
 	<div class="stats hd">&nbsp;</div>
 	<div class="stats hd">Is tweet?</div>
 	<div class="stats hd">Image</div>
-	<div class="stats hd">Name</div>
+	<div class="stats hd name">Name</div>
 	<div class="stats hd message">Text</div>
 	<br style="clear: left;" />
       </div>
@@ -58,7 +58,7 @@ $def with (brand, usp, quotes, form)
 	    </div>
 	    <div class="stats">$bobo(q, 'is_tweet')</div>
 	    <div class="stats"><img style="width:60px" src="$q['image']" /></div>
-	    <div class="stats">$q['name']</div>
+	    <div class="stats name">$q['name']</div>
 	    <div class="stats message">"$q['text']"</div>
 	    <br style="clear: left;" />
 	  </div>
